Added glasses to backend